# earth-to-orbit-monitoring

./: .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  CONTRIBUTORS.md  DB_SCHEMA.md  DEPLOYMENT.md  Makefile  NOTIFICATIONS.md  PLANNING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  static.yml
docs/: INFRA_OPTIONS.md  MAKE_TARGETS.md  REBUILD_PLAN.md  ROADMAP.md  SCREENSHOTS.md  SPRINT_2_PLAN.md
docs/verification/: smoke_e2o_20260303T203646Z.md  smoke_e2o_fix_20260303T213808Z.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx
scripts/: e2o_screenshot.sh
services/api/: Dockerfile
services/db-migrate/: Dockerfile  (+1 more)
services/poller/: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
services/poller/migrations/: env.py
services/poller/migrations/versions/: 20260221_000001_create_launches_table.py  20260223_000002_add_porch_alert_flags.py  20260306_000003_create_locations_and_pads_tables.py  20260306_000004_add_fk_launches_pad_id.py  20260307_000005_create_user_preferences.py  20260307_000005_user_prefs.py  20260307_000006_overlays.py  20260307_000007_recovery_events.py  20260307_000008_ovluniq.py  20260308_000009_asds.py  20260308_000009_asds_overlays_seed.py  20260308_000010_launch_vid_urls.py  20260309_000011_launch_details.py
services/poller/poller/: __init__.py  client.py  config.py  db.py  models.py  notifications.py  poller.py  schemas.py
services/poller/scripts/: wait_for_db.py
services/poller/tests/: conftest.py  test_poller.py
(+4 files in other folders)
